--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-import math
-import numpy as np
-import matplotlib.pyplot as plt
-import pandas as pd
+Packages Required:
+math, numpy, matplotlib.pyplot, pandas
